--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>In Europa gibt es viele gute Reiseziele.</p>
     <p>Nochmal mehr Inhalt!</p>
     <p>Feature 2</p>
+    <p>Feature 3</p>
     <a href="#">Nach oben springen</a>
   </body>
 </html>
