--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coole Urlaubswebseite!</title>
   </head>
-  <body style="background-color: rgb(255, 255, 255)">
+  <body style="background-color: rgb(0, 0, 0)">
     <h1>Das hier wird eine colle Urlaubswebseite!</h1>
     <p style="color: red;">Ein kleiner Absatz.</p>
     <p>In Europa gibt es viele gute Reiseziele.</p>
     <p>Nochmal mehr Inhalt!</p>
     <p>Feature 2</p>
     <p>Feature 3</p>
+    <p>Feature 4</p>
     <a href="#">Nach oben springen</a>
   </body>
 </html>
